--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.54.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
