--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.54.0",
+    "dayjs": "^1.11.13",
+    "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
     "vite-svg-loader": "^5.1.0",
