--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.54.0",
     "dayjs": "^1.11.13",
+    "node-fetch": "^3.3.2",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
