--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently -k -n VERCEL,VITE \"vercel dev\" \"vite\"",
+    "supabase": "supabase start"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@primevue/themes": "^4.5.3",
     "@supabase/supabase-js": "^2.54.0",
     "dayjs": "^1.11.13",
     "node-fetch": "^3.3.2",
@@ -23,6 +26,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.7.0",
+    "concurrently": "^9.2.1",
+    "supabase": "^2.67.1",
     "typescript": "~5.8.3",
     "vite": "^5.4.19",
     "vite-plugin-pwa": "^1.0.2",
